--- a/contact.html
+++ b/contact.html
@@ -214,13 +214,23 @@
        
   <!-- ================ contact section end ================= -->
 
+<!--================ End Portfolio Area =================-->
+
+
+
+<!--================ End Testimonial Area =================-->
 <!--================ start footer Area =================-->
 
-
+ 
 <div class="footer-bottom">
     <div class="container">
         <div class="row ">
-            <p class="col-lg-12 footer-text ">footer
+               
+            <p class="col-lg-12 footer-text ">
+                    <a class="dn_btn" href=""><i class="ti-mobile"></i>+64  21 023 97229</a>
+                    <span class="dn_btn"> <i class="ti-location-pin"></i> Regus North Shore, Level 3 Building 4, 49 Parkway Drive, Rosedale, Auckland</span><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
         </div>    
     </div>  
